@@ -13,24 +13,24 @@
 <generator uri="<TMPL_VAR NAME="CHIRPY_URL">" version="<TMPL_VAR NAME="CHIRPY_VERSION">"><TMPL_VAR NAME="CHIRPY_NAME"></generator>
 <TMPL_LOOP NAME="QUOTES">
 <entry>
-<title type="text">#<TMPL_VAR NAME="QUOTE_ID"></title>
+<title type="text"><TMPL_VAR NAME="QUOTE_ID"></title>
 <link href="<TMPL_VAR NAME="QUOTE_URL">"/>
 <id><TMPL_VAR NAME="QUOTE_URL"></id>
 <published><TMPL_VAR NAME="QUOTE_DATE_ISO8601"></published>
 <updated><TMPL_VAR NAME="QUOTE_DATE_ISO8601"></updated>
 <summary type="text"><TMPL_VAR NAME="QUOTE_RATING"></summary>
 <content type="xhtml"><div xmlns="http://www.w3.org/1999/xhtml">
-	<p><b><a href="<TMPL_VAR NAME="QUOTE_RATING_DOWN_URL">">[<TMPL_VAR NAME="QUOTE_RATING_DOWN_SHORT_TITLE">]</a>
-	(<TMPL_VAR NAME="QUOTE_RATING">)
-	<a href="<TMPL_VAR NAME="QUOTE_RATING_UP_URL">">[<TMPL_VAR NAME="QUOTE_RATING_UP_SHORT_TITLE">]</a>
-	<a href="<TMPL_VAR NAME="QUOTE_REPORT_URL">">[<TMPL_VAR NAME="QUOTE_REPORT_SHORT_TITLE">]</a></b></p>
-	<p><tt><TMPL_VAR NAME="QUOTE_BODY"></tt></p>
-	<TMPL_IF NAME="QUOTE_NOTES"><p><b><TMPL_VAR NAME="QUOTE_NOTES_TITLE"></b>
-	<TMPL_VAR NAME="QUOTE_NOTES"></p></TMPL_IF>
-	<TMPL_IF NAME="QUOTE_TAGS"><p><b><TMPL_VAR NAME="QUOTE_TAGS_TITLE"></b>
-	<TMPL_LOOP NAME="QUOTE_TAGS">
-	<a href="<TMPL_VAR NAME="URL">"><TMPL_VAR NAME="TAG"></a>
-	</TMPL_LOOP></p></TMPL_IF>
+<p><b><a href="<TMPL_VAR NAME="QUOTE_RATING_DOWN_URL">">[<TMPL_VAR NAME="QUOTE_RATING_DOWN_SHORT_TITLE">]</a>
+(<TMPL_VAR NAME="QUOTE_RATING">)
+<a href="<TMPL_VAR NAME="QUOTE_RATING_UP_URL">">[<TMPL_VAR NAME="QUOTE_RATING_UP_SHORT_TITLE">]</a>
+<a href="<TMPL_VAR NAME="QUOTE_REPORT_URL">">[<TMPL_VAR NAME="QUOTE_REPORT_SHORT_TITLE">]</a></b></p>
+<p><tt><TMPL_VAR NAME="QUOTE_BODY"></tt></p>
+<TMPL_IF NAME="QUOTE_NOTES"><p><b><TMPL_VAR NAME="QUOTE_NOTES_TITLE"></b>
+<TMPL_VAR NAME="QUOTE_NOTES"></p></TMPL_IF>
+<TMPL_IF NAME="QUOTE_TAGS"><p><b><TMPL_VAR NAME="QUOTE_TAGS_TITLE"></b>
+<TMPL_LOOP NAME="QUOTE_TAGS">
+<a href="<TMPL_VAR NAME="URL">"><TMPL_VAR NAME="TAG"></a>
+</TMPL_LOOP></p></TMPL_IF>
 </div></content>
 </entry>
 </TMPL_LOOP>
