@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="<TMPL_VAR NAME="CHARACTER_ENCODING">"?>
-<rss version="2.0"
-xmlns:content="http://purl.org/rss/1.0/modules/content/">
+<rss version="2.0">
 <channel>
 <title><TMPL_VAR NAME="FEED_TITLE"></title>
 <description><TMPL_VAR NAME="FEED_SUBTITLE"></description>
@@ -10,24 +9,23 @@ xmlns:content="http://purl.org/rss/1.0/modules/content/">
 <generator><TMPL_VAR NAME="CHIRPY_URL"></generator>
 <TMPL_LOOP NAME="QUOTES">
 <item>
-<title>#<TMPL_VAR NAME="QUOTE_ID"></title>
+<title><TMPL_VAR NAME="QUOTE_ID"></title>
 <link><TMPL_VAR NAME="QUOTE_URL"></link>
 <guid><TMPL_VAR NAME="QUOTE_URL"></guid>
 <pubDate><TMPL_VAR NAME="QUOTE_DATE_RFC822"></pubDate>
-<description><TMPL_VAR NAME="QUOTE_RATING"></description>
-<content:encoded><![CDATA[
-	<p><b><a href="<TMPL_VAR NAME="QUOTE_RATING_DOWN_URL">">[<TMPL_VAR NAME="QUOTE_RATING_DOWN_SHORT_TITLE">]</a>
-	(<TMPL_VAR NAME="QUOTE_RATING">)
-	<a href="<TMPL_VAR NAME="QUOTE_RATING_UP_URL">">[<TMPL_VAR NAME="QUOTE_RATING_UP_SHORT_TITLE">]</a>
-	<a href="<TMPL_VAR NAME="QUOTE_REPORT_URL">">[<TMPL_VAR NAME="QUOTE_REPORT_SHORT_TITLE">]</a></b></p>
-	<p><tt><TMPL_VAR NAME="QUOTE_BODY"></tt></p>
-	<TMPL_IF NAME="QUOTE_NOTES"><p><b><TMPL_VAR NAME="QUOTE_NOTES_TITLE"></b>
-	<TMPL_VAR NAME="QUOTE_NOTES"></p></TMPL_IF>
-	<TMPL_IF NAME="QUOTE_TAGS"><p><b><TMPL_VAR NAME="QUOTE_TAGS_TITLE"></b>
-	<TMPL_LOOP NAME="QUOTE_TAGS">
-	<a href="<TMPL_VAR NAME="URL">"><TMPL_VAR NAME="TAG"></a>
-	</TMPL_LOOP></p></TMPL_IF>
-]]></content:encoded>
+<description><![CDATA[
+<p><b><a href="<TMPL_VAR NAME="QUOTE_RATING_DOWN_URL">">[<TMPL_VAR NAME="QUOTE_RATING_DOWN_SHORT_TITLE">]</a>
+(<TMPL_VAR NAME="QUOTE_RATING">)
+<a href="<TMPL_VAR NAME="QUOTE_RATING_UP_URL">">[<TMPL_VAR NAME="QUOTE_RATING_UP_SHORT_TITLE">]</a>
+<a href="<TMPL_VAR NAME="QUOTE_REPORT_URL">">[<TMPL_VAR NAME="QUOTE_REPORT_SHORT_TITLE">]</a></b></p>
+<p><tt><TMPL_VAR NAME="QUOTE_BODY"></tt></p>
+<TMPL_IF NAME="QUOTE_NOTES"><p><b><TMPL_VAR NAME="QUOTE_NOTES_TITLE"></b>
+<TMPL_VAR NAME="QUOTE_NOTES"></p></TMPL_IF>
+<TMPL_IF NAME="QUOTE_TAGS"><p><b><TMPL_VAR NAME="QUOTE_TAGS_TITLE"></b>
+<TMPL_LOOP NAME="QUOTE_TAGS">
+<a href="<TMPL_VAR NAME="URL">"><TMPL_VAR NAME="TAG"></a>
+</TMPL_LOOP></p></TMPL_IF>
+]]></description>
 </item>
 </TMPL_LOOP>
 </channel>
