@@ -12,6 +12,8 @@
 * Extended quick style linking method: <> is now omitted and link text can be
   changed by separating it from URL by whitespace, e.g.
     Surf to <http://chirpy.sourceforge.net/ The Chirpy! web site>!
+* Simplified RSS feed: using HTML in <description> and removing
+  <content:encoded> and <xhtml:body>, making feedvalidator.org like it more
 * Bugfix: quote rating up log entry now includes quote ID (#1493589)
 
  _____________________________________________________________________________
